--- a/srv/blackroad/web/index.html
+++ b/srv/blackroad/web/index.html
@@ -45,7 +45,7 @@
 <body>
 <div id="root"></div>
 <script type="text/babel">
-const {useState,useEffect,useMemo,useRef} = React; const styled = window.styled;
+const {useState,useEffect,useMemo,useRef,useCallback} = React; const styled = window.styled;
 /* ------------ API helpers ------------- */
 async function apiGet(p){const r=await fetch(p,{credentials:"include"});if(!r.ok)throw new Error(await r.text());return r.json()}
 async function apiPost(p,b={}){const r=await fetch(p,{method:"POST",headers:{"Content-Type":"application/json"},credentials:"include",body:JSON.stringify(b)});if(!r.ok)throw new Error(await r.text());return r.json()}
@@ -148,13 +148,25 @@ function Dashboard({route}) {
   const [mem,setMEM]=useState(Array.from({length:40},()=>Math.random()*70+20));
   const [gpu,setGPU]=useState(Array.from({length:40},()=>Math.random()*90));
   const [build,setBuild]=useState(63); const [timeline,setTimeline]=useState([]); const [commits,setCommits]=useState([]); const [tasks,setTasks]=useState([]);
+  const [jobs,setJobs]=useState([]);
+  const [jobOutput,setJobOutput]=useState('');
+  const jobOutRef=useRef(null);
+  const activeJobRef=useRef(null);
+
+  const loadJobs=useCallback(async()=>{try{const res=await fetch('/jobs');const data=await res.json();setJobs(Array.isArray(data.jobs)?data.jobs:[]);}catch(err){console.error('jobs load failed',err);}},[]);
+  const openJob=useCallback(async(id)=>{activeJobRef.current=id;try{const res=await fetch(`/jobs/${id}`);const data=await res.json();const text=data.output||JSON.stringify(data,null,2);setJobOutput(text);setTimeout(()=>{if(jobOutRef.current){jobOutRef.current.scrollTop=jobOutRef.current.scrollHeight;}},0);}catch(err){setJobOutput(String(err));}},[]);
 
   useEffect(()=>{Promise.allSettled([apiGet('/api/timeline'),apiGet('/api/tasks'),apiGet('/api/commits'),apiGet('/api/state')]).then(([tl,ts,cs,st])=>{
     if(tl.value)setTimeline(tl.value); if(ts.value)setTasks(ts.value); if(cs.value)setCommits(cs.value);
-    if(st.value){setWallet(st.value.wallet); setAgents(st.value.agents); setBuild(st.value.build)}
-  }); const proto=location.protocol==='https:'?'wss':'ws'; const ws=new WebSocket(`${proto}://${location.host}/ws`);
-  ws.onmessage=e=>{try{const m=JSON.parse(e.data); if(m.type==='activity') setTimeline(t=>[m.item,...t].slice(0,80)); if(m.type==='metrics'){setCPU(x=>[...x.slice(1),m.cpu]); setMEM(x=>[...x.slice(1),m.mem]); setGPU(x=>[...x.slice(1),m.gpu]);} if(m.type==='build') setBuild(m.progress); if(m.type==='wallet') setWallet(m.balance.toFixed(2)); }catch(_){} };
-  return ()=>ws.close();},[]);
+    if(st.value){setWallet(st.value.wallet); setAgents(st.value.agents); setBuild(st.value.build);}
+  }); loadJobs(); const proto=location.protocol==='https:'?'wss':'ws'; const ws=new WebSocket(`${proto}://${location.host}/ws`);
+  ws.onmessage=e=>{const raw=typeof e.data==='string'?e.data:''; try{const m=JSON.parse(raw); if(m.type==='activity') setTimeline(t=>[m.item,...t].slice(0,80)); if(m.type==='metrics'){setCPU(x=>[...x.slice(1),m.cpu]); setMEM(x=>[...x.slice(1),m.mem]); setGPU(x=>[...x.slice(1),m.gpu]);} if(m.type==='build') setBuild(m.progress); if(m.type==='wallet') setWallet(m.balance.toFixed(2)); }catch(err){}};
+  return ()=>ws.close();},[loadJobs]);
+
+  useEffect(()=>{const origWS=window.WebSocket; const patched=function(url,protocols){const ws=protocols!==undefined?new origWS(url,protocols):new origWS(url); const handler=(event)=>{const raw=String(event.data??''); if(raw.startsWith('[[BLACKROAD_JOB_ID:')){const match=raw.match(/\d+/); const id=match?Number(match[0]):null; if(id){activeJobRef.current=id; setJobOutput(''); loadJobs().then(()=>openJob(id)).catch(()=>{});} return;} if(raw==='[[BLACKROAD_DONE]]'){const id=activeJobRef.current; loadJobs().then(()=>{if(id) openJob(id);}).catch(()=>{}); return;} if(raw.startsWith('[error]')){setJobOutput(prev=>prev?`${prev}\n${raw}`:raw); setTimeout(()=>{if(jobOutRef.current){jobOutRef.current.scrollTop=jobOutRef.current.scrollHeight;}},0); loadJobs().then(()=>{const id=activeJobRef.current; if(id) openJob(id);}).catch(()=>{});} }; ws.addEventListener('message',handler); return ws;};
+  Object.assign(patched,origWS); patched.prototype=origWS.prototype; window.WebSocket=patched; return()=>{window.WebSocket=origWS;};},[loadJobs,openJob]);
+
+  const formatTs=ts=>ts?new Date(ts*1000).toLocaleTimeString():'-';
 
   const filteredTimeline=useMemo(()=>timeline.filter(x=>(x.title||'').toLowerCase().includes(filter.toLowerCase())||(x.desc||'').toLowerCase().includes(filter.toLowerCase())),[timeline,filter]);
   const [code,setCode]=useState(`// Example code\nconsole.log('BlackRoad online');`);
@@ -227,6 +239,29 @@ function Dashboard({route}) {
             <div style={{display:'flex',justifyContent:'space-between'}}><span>GPU</span><span>{Math.round(gpu.at(-1))}%</span></div>
             <Sparkline data={gpu} color={theme.colors.accent3}/>
           </div>
+        </Card>
+        <Card>
+          <div style={{display:'flex',justifyContent:'space-between',alignItems:'center'}}>
+            <div style={{fontWeight:700}}>Jobs</div>
+            <button className="btn small" onClick={loadJobs}>Refresh</button>
+          </div>
+          <table style={{width:'100%',marginTop:8,fontSize:12,borderCollapse:'collapse'}}>
+            <thead><tr><th>ID</th><th>Cmd</th><th>Status</th><th>Started</th><th>Ended</th><th>View</th></tr></thead>
+            <tbody>
+              {jobs.map(job=>(
+                <tr key={job.id}>
+                  <td>{job.id}</td>
+                  <td style={{maxWidth:360,overflow:'hidden',textOverflow:'ellipsis',whiteSpace:'nowrap'}} title={job.cmd}>{job.cmd}</td>
+                  <td>{job.status}</td>
+                  <td>{formatTs(job.started)}</td>
+                  <td>{formatTs(job.ended)}</td>
+                  <td><button className="btn small" onClick={()=>openJob(job.id)}>Open</button></td>
+                </tr>
+              ))}
+              {!jobs.length && <tr><td colSpan="6" style={{padding:'8px 4px',color:'var(--muted)'}}>No jobs yet</td></tr>}
+            </tbody>
+          </table>
+          <pre ref={jobOutRef} style={{background:'#000',color:'#0f0',padding:'1em',height:220,overflow:'auto',borderRadius:6,marginTop:8}}>{jobOutput}</pre>
         </Card>
         <Card>
           <div style={{display:'flex',justifyContent:'space-between',alignItems:'center'}}>
