--- a/var/www/blackroad/llm-chat.html
+++ b/var/www/blackroad/llm-chat.html
@@ -162,7 +162,17 @@
                 for (let i = 0; i < lines.length - 1; i++) {
                   const line = lines[i].trim();
                   if (!line || !line.startsWith('data:')) continue;
-                  const data = JSON.parse(line.slice(5).trim());
+                  const payload = line.slice(5).trim();
+                  if (!payload || payload === '[DONE]') {
+                    finished = finished || payload === '[DONE]';
+                    continue;
+                  }
+                  let data;
+                  try {
+                    data = JSON.parse(payload);
+                  } catch (err) {
+                    continue;
+                  }
                   if (data.delta) {
                     bot += data.delta;
                     last.innerHTML = '<div class="pill">assistant</div>' + bot;
@@ -177,11 +187,16 @@
                   if (buf.trim()) {
                     const line = buf.trim();
                     if (line.startsWith('data:')) {
-                      const data = JSON.parse(line.slice(5).trim());
-                      if (data.delta) {
-                        bot += data.delta;
-                        last.innerHTML =
-                          '<div class="pill">assistant</div>' + bot;
+                      const payload = line.slice(5).trim();
+                      if (payload && payload !== '[DONE]') {
+                        try {
+                          const data = JSON.parse(payload);
+                          if (data.delta) {
+                            bot += data.delta;
+                            last.innerHTML =
+                              '<div class="pill">assistant</div>' + bot;
+                          }
+                        } catch (err) {}
                       }
                     }
                   }
@@ -195,10 +210,16 @@
             if (isEvent && buf.trim()) {
               const line = buf.trim();
               if (line.startsWith('data:')) {
-                const data = JSON.parse(line.slice(5).trim());
-                if (data.delta) {
-                  bot += data.delta;
-                  last.innerHTML = '<div class="pill">assistant</div>' + bot;
+                const payload = line.slice(5).trim();
+                if (payload && payload !== '[DONE]') {
+                  try {
+                    const data = JSON.parse(payload);
+                    if (data.delta) {
+                      bot += data.delta;
+                      last.innerHTML =
+                        '<div class="pill">assistant</div>' + bot;
+                    }
+                  } catch (err) {}
                 }
               }
             }
